--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -15,16 +15,16 @@ callable = app
 log-master = true
 
 # Set up a virtual environment to use with uWSGI
-virtualenv = /root/.local/share/virtualenvs/flask_try-1EnXE9dr
+#virtualenv = /root/.local/share/virtualenvs/flask_try-1EnXE9dr
 
 # Log file path for uWSGI logs
-logto = /home/power/flask_try/logs/uwsgi.log
+#logto = /home/power/flask_try/logs/uwsgi.log
 
 # Specify the socket for Nginx to connect to uWSGI (Unix socket or TCP socket)
 # If you want to use a Unix socket, use something like:
 # socket = /path/to/your/socket.sock
 # Here, using a TCP socket on localhost for testing
-socket = 127.0.0.1:8000
+socket = 0.0.0.0:8000
 
 # Set appropriate permissions for the socket (make it accessible to Nginx)
 chmod-socket = 660
