--- a/flask.conf
+++ b/flask.conf
@@ -25,7 +25,8 @@
 
         location /{
         include /etc/nginx/uwsgi_params;
-        uwsgi_pass 127.0.0.1:8000;
+        #uwsgi_pass 127.0.0.1:8000;
+        uwsgi_pass uwsgi:8000;
             }
 
         #error_page  404              /404.html;
