--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,8 +24,10 @@ stages:          # List of stages for jobs, and their order of execution
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
-    - echo "Compiling the code..."
-    - echo "Compile complete."
+   - echo "Compiling the code..."
+   - echo "pip list "
+   - echo "docker images"
+   - echo "Compile complete."
 
 
 unit-test-job:   # This job runs in the test stage.
