--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,8 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
    - echo "Compiling the code..."
-   - echo "pip list "
-   - echo "docker images"
+   - pip list
+   - docker image
    - echo "Compile complete."
 
 
