--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,8 @@ build-job:       # This job runs in the build stage, which runs first.
   script:
    - echo "Compiling the code..."
    - pip list
+   - docker images
+
 
    - echo "Compile complete."
 
@@ -40,7 +42,7 @@ lint-test-job:   # This job also runs in the test stage.
   stage: test    # It can run at the same time as unit-test-job (in parallel).
   script:
     - echo "Linting code... This will take about 10 seconds."
-    - sleep 10
+    
     - echo "No lint issues found."
 
 deploy-job:      # This job runs in the deploy stage.
@@ -48,5 +50,8 @@ deploy-job:      # This job runs in the deploy stage.
   environment: production
   script:
     - echo "Deploying application..."
+    - cd /home/power/flask_try
+    - pipenv shell
+    - uwsgi --ini-- uwsgi.ini
     - echo "Application successfully deployed."
 
