--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,8 @@ build-job:       # This job runs in the build stage, which runs first.
    - echo "Compiling the code..."
    - pip list
      #- docker images
-
+   - pwd
+   
 
    - echo "Compile complete."
 
@@ -35,7 +36,7 @@ unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Running unit tests... This will take about 60 seconds."
-    - sleep 60
+      #- sleep 60
     - echo "Code coverage is 90%"
 
 lint-test-job:   # This job also runs in the test stage.
