--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,8 @@ build-job:       # This job runs in the build stage, which runs first.
    - pip list
      #- docker images
    - pwd
-   
+   - pipenv --venv
+     # - pip install -r requirements.txt   
 
    - echo "Compile complete."
 
@@ -51,8 +52,7 @@ deploy-job:      # This job runs in the deploy stage.
   environment: production
   script:
     - echo "Deploying application..."
-    - cd /home/power/flask_try
-    - pipenv shell
+  
     - uwsgi --ini-- uwsgi.ini
     - echo "Application successfully deployed."
 
