--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,9 @@ build-job:       # This job runs in the build stage, which runs first.
    - pip list
      #- docker images
    - pwd
+   - pipenv shell  # 启功虚拟环境
    - pipenv --venv
-     # - pip install -r requirements.txt   
+   - pip install -r requirements.txt   
 
    - echo "Compile complete."
 
