--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,8 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
    - echo "Compiling the code..."
-   - pip list
+   - echo $0
+   - whoami
      #- docker images
    - pwd
    - pipenv shell  # 启功虚拟环境
