--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,8 @@ build-job:       # This job runs in the build stage, which runs first.
    - whoami
      #- docker images
    - pwd
-   - pipenv shell  # 启功虚拟环境
+   - pipenv install
+     #- pipenv shell  # 启功虚拟环境
    - pipenv --venv
    - pip install -r requirements.txt   
 
