--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,10 +29,10 @@ build-job:       # This job runs in the build stage, which runs first.
    - whoami
      #- docker images
    - pwd
-   - pipenv install
+     #- pipenv install
      #- pipenv shell  # 启功虚拟环境
    - pipenv --venv
-   - pip install -r requirements.txt   
+     #- pip install -r requirements.txt   
 
    - echo "Compile complete."
 
