--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ build-job:       # This job runs in the build stage, which runs first.
      #- pipenv install
      #- pipenv shell  # 启功虚拟环境
    - pipenv --venv
-   - pipenv shell 
+   - . /home/gitlab-runner/.local/share/virtualenvs/flask-oDQCXmhj/bin/activate 
      
      
      #- pip install -r requirements.txt   
