--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,6 +62,6 @@ deploy-job:      # This job runs in the deploy stage.
   script:
     - echo "Deploying application..."
   
-    - uwsgi --ini-- uwsgi.ini
+    - uwsgi --ini uwsgi.ini
     - echo "Application successfully deployed."
 
