--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,19 +25,17 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
    - echo "Compiling the code..."
-   - echo $0
-   - whoami
-     #- docker images
-   - pwd
-   - /bin/bash 
-   - echo $0        
+   - docker images  
+   - docker build -t my_nginx:v1 -f nginx_Dockerfile
+   - docker build -t my_flask:v1 -f flask_Dockerfile
      #- pipenv install
+   
      #- pipenv shell  # 启功虚拟环境
-   - pipenv --venv
-   - . /home/gitlab-runner/.local/share/virtualenvs/flask-oDQCXmhj/bin/activate 
+     #- pipenv --venv
+     #- . /home/gitlab-runner/.local/share/virtualenvs/flask-oDQCXmhj/bin/activate 
     
      
-   - pip install -r requirements.txt -i  https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple  
+     #- pip install -r requirements.txt -i  https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple  
 
 
 unit-test-job:   # This job runs in the test stage.
@@ -61,8 +59,8 @@ deploy-job:      # This job runs in the deploy stage.
   environment: production
   script:
     - echo "Deploying application..."
-    - docker ps
-    - docker run -p 880:880 my-flask:v1  
-    - uwsgi --ini uwsgi.ini
+    - docker-compose up --build 
+      
+      # - uwsgi --ini uwsgi.ini
     - echo "Application successfully deployed."
 
