--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
    - echo "Compiling the code..."
+   - pwd
    - docker images  
    - docker build -t my_nginx:v1 -f nginx_Dockerfile
    - docker build -t my_flask:v1 -f flask_Dockerfile
