--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,8 @@ build-job:       # This job runs in the build stage, which runs first.
    - echo "Compiling the code..."
    - pwd
    - docker images  
-   - docker build -t my_nginx:v1 -f nginx_Dockerfile
-   - docker build -t my_flask:v1 -f flask_Dockerfile
+   - docker build -t my_nginx:v1 -f nginx_Dockerfile .
+   - docker build -t my_flask:v1 -f flask_Dockerfile .
      #- pipenv install
    
      #- pipenv shell  # 启功虚拟环境
