--- a/flask.conf
+++ b/flask.conf
@@ -1,65 +1,48 @@
 
-# user  luo;
-# worker_processes  1;
+server {
+    listen 880;
+    
+    # 如果需要，也可以指定域名
+    # server_name 127.0.0.1;
 
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
+    location  / {
+        # 允许跨域请求
+        # add_header Access-Control-Allow-Origin *;  # 可以根据需要替换成具体的域名
+        # add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';  # 允许的 HTTP 方法
+        # add_header Access-Control-Allow-Headers 'Content-Type, Authorization, X-Requested-With';  # 允许的请求头
+        # add_header 'Access-Control-Allow-Origin' '*';
+        # add_header 'Access-Control-Allow-Credentials' 'true';
 
-#pid        logs/nginx.pid;
+        # 处理 OPTIONS 请求，返回 204 响应并添加 CORS 头部
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin *;  # 可以根据需要替换成具体的域名
+            add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';  # 允许的 HTTP 方法
+            add_header Access-Control-Allow-Headers "Content-Type";
+            return 200;  # 返回 204 No Content 响应
+        }
 
-
-#events {
-#    worker_connections  1024;
-#}
-
-
-
-    server {
-        listen       880;
-        #server_name  172.17.249.58;
-        # server_name 127.0.0.1;
-        #charset koi8-r;
-
-     #   access_log  logs/host.access.log  main;
-
-        location /{
+        # 转发请求到后端服务（uwsgi）
         include /etc/nginx/uwsgi_params;
-        #uwsgi_pass 127.0.0.1:8000;
-        uwsgi_pass uwsgi:8000;
-            }
+        uwsgi_pass uwsgi:8000;  # uwsgi 服务器地址
 
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        #error_page   500 502 503 504  /50x.html;
-        #location = /50x.html {
-        #    root   html;
-        #}
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        ##    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
     }
+}
+
+
+server {
+    listen       80;
+    #server_name  172.17.249.58;
+    # server_name 127.0.0.1;
+    #charset koi8-r;
+
+    #   access_log  logs/host.access.log  main;
+    root /var/www/html; #设置网站根目录
+    
+    index index.html index.htm index.nginx-debian.html;  
+    location / {
+        try_files $uri $uri/ =404;
+    }
+
+}
 
 
