--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,100 @@
-blinker==1.6.2
-cffi==1.17.1
+aiohappyeyeballs==2.4.4
+aiohttp==3.10.5
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==4.7.0
+asttokens==3.0.0
+async-timeout==4.0.3
+attrs==24.2.0
+blinker==1.9.0
+Bottleneck==1.4.2
+Brotli==1.0.9
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
-cryptography==43.0.3
-Flask==3.0.3
+dataclasses-json==0.6.7
+distro==1.9.0
+docarray==0.40.0
+duckduckgo_search==6.4.1
+exceptiongroup==1.2.2
+executing==2.1.0
+Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
-greenlet==3.0.1
+frozenlist==1.5.0
+greenlet==3.1.1
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.7
+httpx==0.27.2
+httpx-sse==0.4.0
+hyperframe==6.0.1
+icecream==2.1.3
+idna==3.10
+importlib_metadata==8.5.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
-MarkupSafe==2.1.3
+jiter==0.6.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.11
+langchain-community==0.3.11
+langchain-core==0.3.24
+langchain-openai==0.2.12
+langchain-text-splitters==0.3.2
+langgraph==0.2.59
+langgraph-checkpoint==2.0.9
+langgraph-sdk==0.1.45
+langsmith==0.1.147
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.23.1
+mdurl==0.1.2
+mkl_fft==1.3.11
+mkl_random==1.2.8
+mkl-service==2.4.0
+msgpack==1.1.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+numexpr==2.10.1
+numpy==1.26.4
+openai==1.57.3
+orjson==3.10.7
+packaging==24.2
+pandas==2.2.3
+pandasql==0.7.3
 pip==24.2
-pycparser==2.21
-PyMySQL==1.0.2
-PyYAML==6.0.2
-setuptools==75.3.0
+primp==0.8.3
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydantic-settings==2.6.1
+Pygments==2.18.0
+PyMySQL==1.1.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.9.4
+setuptools==75.1.0
+six==1.16.0
+sniffio==1.3.1
 SQLAlchemy==2.0.34
-typing_extensions==4.11.0
-Werkzeug==3.0.6
+tenacity==8.5.0
+tiktoken==0.8.0
+tqdm==4.67.1
+types-requests==2.32.0.20241016
+typing_extensions==4.12.2
+typing-inspect==0.9.0
+tzdata==2023.3
+urllib3==2.2.1
+uWSGI==2.0.21
+Werkzeug==3.1.3
 wheel==0.44.0
-uwsgi==2.0.28
+yarl==1.7.2
+flask_cors==5.0.0
+zipp==3.21.0
